--- a/src/less/home-links.less
+++ b/src/less/home-links.less
@@ -4,5 +4,6 @@
     grid-auto-rows: 260px;
     grid-column-gap: 40px;
     grid-row-gap: 20px;
+    justify-content: center;
     margin-bottom: 113px;
 }
