--- a/src/less/main.less
+++ b/src/less/main.less
@@ -14,5 +14,6 @@
 @import "cambridge-link";
 @import "footer";
 @import "inner-page";
-@import "side-nav";
+@import "aside-nav";
 @import "article";
+@import "page";
