--- a/src/less/_fonts.less
+++ b/src/less/_fonts.less
@@ -9,8 +9,8 @@
 
 @font-face {
     font-family: 'Clear Sans';
-    src: local('Clear Sans Bold'), local('ClearSans-Bold'),
-        url('../fonts/ClearSans/ClearSans-Bold.woff') format('woff');
+    src: local('Clear Sans'), local('ClearSans'),
+        url('../fonts/ClearSans/ClearSans.woff') format('woff');
     font-weight: bold;
     font-style: normal;
 }
