--- a/src/less/cambridge-link.less
+++ b/src/less/cambridge-link.less
@@ -20,3 +20,13 @@
 .cambridge-link__title {
     color: #224d92;
 }
+
+@media screen and (max-width: @breakpoint-small) {
+    .cambridge-link {
+        padding: 20px;
+    }
+    .cambridge-link__text {
+        padding: 20px;
+        font-size: 20px;
+    }
+}
