--- a/src/less/article.less
+++ b/src/less/article.less
@@ -26,3 +26,9 @@
     font-size: 12px;
     font-weight: 700;
 }
+
+.article__date {
+    margin-bottom: 10px;
+    color: #9c9c9c;
+    font-size: 14px;
+}
