--- a/src/less/aside-nav.less
+++ b/src/less/aside-nav.less
@@ -1,9 +1,9 @@
-.side-nav ul {
+.aside-nav ul {
     border-top: 1px solid #d6d6d6;
     .m-reset-list;
 }
 
-.side-nav a {
+.aside-nav a {
     display: block;
     padding: 20px;
     border-bottom: 1px solid #d6d6d6;
@@ -15,7 +15,7 @@
     .m-no-link-decor;
 }
 
-.side-nav a:hover {
+.aside-nav a:hover {
     background-color: darken(#eef0f4, 5%);
     transition: background-color 0.25s;
 }
