--- a/src/less/home-slider.less
+++ b/src/less/home-slider.less
@@ -49,6 +49,7 @@
 
 .home-slider__more {
     white-space: nowrap;
+    text-decoration: none;
 }
 
 @media screen and (max-width: @breakpoint-medium) {
