--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -8,13 +8,13 @@
     margin: 18px 0;
 }
 
-.menu li.uk-parent .menu__top-link {
+.menu li.parent .menu__top-link {
     padding: 10px 23px 10px 10px;
     background: url("data:image/svg+xml,%3Csvg viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolyline fill='none' stroke='%23000' stroke-width='1.03' points='16 7 10 13 4 7'%3E%3C/polyline%3E%3C/svg%3E") 98% 51% no-repeat;
     background-size: 15px 15px;
 }
 
-.menu li.uk-active .menu__top-link {
+.menu li.active .menu__top-link {
     border-color: #75787b;
 }
 
@@ -26,6 +26,7 @@
     font-weight: 700;
     border-bottom: 5px solid transparent;
     white-space: nowrap;
+    .m-no-link-decor;
 }
 
 .menu__top-link:hover {
