--- a/src/less/search-bar.less
+++ b/src/less/search-bar.less
@@ -10,3 +10,9 @@
 .search-bar__input {
     width: 220px;
 }
+
+@media screen and (max-width: @breakpoint-small) {
+    .search-bar__input {
+        width: 100%;
+    }
+}
