--- a/src/less/header.less
+++ b/src/less/header.less
@@ -51,6 +51,7 @@
 .header__partners-logo {
     max-width: 170px;
     height: 50px;
+    margin: 0 10px;
 }
 
 .header__search-bar {
@@ -78,7 +79,7 @@
 @media screen and (max-width: @breakpoint-medium) {
     .header__top {
         flex-direction: column;
-    }       
+    }
     .header__title {
         margin: 15px 0;
     }
@@ -132,8 +133,3 @@
         display: block;
     }
 }
-
-
-
-
-
